# falk

./: .gitignore  Makefile  demo.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  python.Dockerfile  stash.ts  tox.ini  webpack.config.js
client/: events.ts  falk.ts  http-transport.ts  rendering.ts  types.ts  utils.ts  websocket-transport.ts
docs/: mkdocs.yml
falk/: app.py  apps.py  asgi.py  component_caching.py  component_registry.py  component_templates.py  components.py  dependency_injection.py  errors.py  file_uploads.py  html.py  http.py  immutable_proxy.py  providers.py  pytest_plugin.py  pyx.py  rendering.py  request_handling.py  request_handling2.py  routing.py  server.py  static_files.py  test_app.py  tokens.py  wsgi.py
tests/: conftest.py  test_0000_test_suite.py  test_0001_test_suite.py  test_0010_component_caching.py  test_0010_component_registry.py  test_0010_dependency_injection.py  test_0010_html.py  test_0010_pyx.py  test_0010_tokens.py  test_0020_request_parsing.py  test_0021_views.py  test_0022_middlewares.py  test_0023_post_requests.py  test_0024_post_multipart_requests.py  test_0024_post_multipart_requests2.py  test_0025_asgi_sub_apps.py  test_0026_settings.py  test_0027_entry_points.py  test_0028_custom_dependencies.py  test_0030_components.py  test_0030_request_handling.py  test_0040_callback_passing.py  test_0040_custom_client_headers.py  test_0040_event_delegation.py  test_0040_render_events.py  test_0040_rendering_flags.py  test_0040_request_timeouts.py  test_0040_run_callback_in_javascript.py  test_0050_asgi_mount.py  (+6 more)
(+67 files in other folders)
